--- a/class.html
+++ b/class.html
@@ -64,5 +64,13 @@
             <td>A fantasy novel following the adventure of Bilbo Baggins.</td>
         </tr>
     </table>
+    
+    <h2>Portfolio</h2>
+    <ul>
+        <li><a href="your-cpanel-link/about_me.html" target="_blank">Assignment 1 cPanel</a></li>
+        <li><a href="your-github-link/about_me.html" target="_blank">Assignment 1 GitHub</a></li>
+        <li><a href="your-github-link/me_two.html" target="_blank">Assignment 2 CSS</a></li>
+        <li><a href="your-github-link/project1.html" target="_blank">Project 1</a></li>
+    </ul>
 </body>
 </html>
