--- a/class.html
+++ b/class.html
@@ -67,10 +67,15 @@
     
     <h2>Portfolio</h2>
     <ul>
-        <li><a href="your-cpanel-link/about_me.html" target="_blank">Assignment 1 cPanel</a></li>
         <li><a href="your-github-link/about_me.html" target="_blank">Assignment 1 GitHub</a></li>
         <li><a href="your-github-link/me_two.html" target="_blank">Assignment 2 CSS</a></li>
         <li><a href="your-github-link/project1.html" target="_blank">Project 1</a></li>
+    </ul>
+
+    <h2>Additional Pages</h2>
+    <ul>
+        <li><a href="me_two.html" target="_blank">me_two.html</a> - <strong>Coming Soon</strong></li>
+        <li><a href="project1.html" target="_blank">project1.html</a> - <strong>Coming Soon</strong></li>
     </ul>
 </body>
 </html>
