--- a/portfolio.html
+++ b/portfolio.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Matt Lantin's Portfolio</h1>
     <ul>
-        <li><a href="your-github-link/about_me.html" target="_blank">about_me.htmlGitHub</a></li>
-        <li><a href="your-github-link/me_two.html" target="_blank">me_two.html CSS</a></li>
-        <li><a href="your-github-link/project1.html" target="_blank">Project1.html</a></li>
+        <li><a href="https://mattlantin.github.io/tufts_cs120/" target="_blank">about_me.htmlGitHub</a></li>
+        <li><a href="https://mattlantin.github.io/tufts_cs120/me_two.html" target="_blank">me_two.html CSS</a></li>
+        <li><a href="https://mattlantin.github.io/project_1/index.html" target="_blank">Project1.html</a></li>
     </ul>
 </body>
 </html>
